crates/rastair2-vcf/src/fields/snapshots/rastair2_vcf__fields__info_field__tests__floats.snap
---
source: crates/rastair2-vcf/src/fields/info_field.rs
expression: result
---
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##contig=<ID=1,length=10>
##INFO=<ID=F32,Number=A,Type=Float,Description="Test f32">
##INFO=<ID=F64,Number=A,Type=Float,Description="Test f64">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO
1	1	.	.	.	0	.	F32=1.1,2.2;F64=42.42
