crates/rastair2-vcf/src/fields/snapshots/rastair2_vcf__fields__info_field__tests__integers.snap
---
source: crates/rastair2-vcf/src/fields/info_field.rs
expression: result
---
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##contig=<ID=1,length=10>
##INFO=<ID=U32,Number=A,Type=Integer,Description="Test u32">
##INFO=<ID=U64,Number=A,Type=Integer,Description="Test u64">
##INFO=<ID=I32,Number=A,Type=Integer,Description="Test i32">
##INFO=<ID=I64,Number=A,Type=Integer,Description="Test i64">
##INFO=<ID=Usize,Number=A,Type=Integer,Description="Test usize">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO
1	1	.	.	.	0	.	U32=1,2;I32=42;U64=42;I64=1,2;Usize=42
