crates/rastair2-vcf/src/fields/snapshots/rastair2_vcf__fields__info_field__tests__strings.snap
---
source: crates/rastair2-vcf/src/fields/info_field.rs
expression: result
---
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##contig=<ID=1,length=10>
##INFO=<ID=STR,Number=A,Type=String,Description="Test string">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO
1	1	.	.	.	0	.	STR=test1,test2
